--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.17)
 project(fusion_viso2_imu)
 
-#include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories("C:\\Users\\inigo\\Documents\\libraries\\eigen-3.3.7")
 #find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_library(fusion_viso2_imu library.cpp library.h)
-add_executable(test_fustion_viso2_imu test.cpp library.cpp library.h)
+add_executable(test_fusion_viso2_imu test.cpp library.cpp library.h multivar_noise.h)
