--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ build/*
 
 *autobuild-stamp
 
+/data.csv
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/matlab
 # Edit at https://www.toptal.com/developers/gitignore?templates=matlab
