--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.17)
 project(fusion_viso2_imu)
 
 include_directories("C:\\Users\\inigo\\Documents\\libraries\\eigen-3.3.7")
-#find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+
+set(BOOST_ROOT "C:\\Users\\inigo\\Documents\\libraries\\boost_1_73_0")
+find_package(Boost)
+include_directories(${Boost_INCLUDE_DIRS})
 
 set(CMAKE_CXX_STANDARD 20)
 
