Added config file and parsing code.
Parameters still not added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ set(BOOST_ROOT "C:\\Users\\inigo\\Documents\\libraries\\boost_1_74_0")
 find_package(Boost)
 include_directories(${Boost_INCLUDE_DIRS})
 
+#include yaml-cpp
+add_subdirectory(third-party/yaml-cpp)
+
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 
@@ -21,3 +25,4 @@ add_executable(test_fusion_viso2_imu test.cpp multivar_noise.h)
 target_link_libraries(test_fusion_viso2_imu PUBLIC fusion_viso2_imu functions_fusion_viso2_imu)
 target_include_directories(test_fusion_viso2_imu PUBLIC ${Boost_INCLUDE_DIRS})
 target_link_libraries(test_fusion_viso2_imu ${Boost_LIBRARIES})
+target_link_libraries(test_fusion_viso2_imu PRIVATE yaml-cpp)
