Changed the way the observations are set up to allow for an arbitrary amount of them.

--- a/config.yaml
+++ b/config.yaml
@@ -3,31 +3,40 @@
   N: 4
   dt: 0.03
   T: 1.0
-  x: [0, 0, 0, 0]
+  x0: [0, 0, 0, 0]
   Qd: [1, 1, 1, 1]
   Qm: .1
-  Rd: [1, 1]
-  Rm: .1
+  obs:
+    - Rd: [1, 1]
+      Rm: .1
   u: [0, 0, 0, -0.1]
 - # RTBP
   N: 4
   dt: 0.03
   T: 6.2296051135204102
-  x: [1.033366313746765, 0, 0, -.05849376854515592]
+  x0: [1.033366313746765, 0, 0, -.05849376854515592]
   Qd: [1, 1, 1, 1]
   Qm: .001
-  Rd: [1, 1]
-  Rm: .001
+  obs:
+    - Rd: [1, 1]
+      Rm: .001
   u: [0, 0, 0, 0]
 - # Vehicle
   N: 6
   dt: 0.3
   T: 100
-  x: [0, 0, 0, 1, 0, 0]
+  x0: [0, 0, 0, 1, 0, 0]
   Qd: [0, 0, 0, 1, 1, 1]
-  Qm: .05
+  Qm: .1
   Rd: [1, 1, 1]
   R2d: [1, 1, 1]
+  obs:
+    - Rd: [1, 1, 1]
+      Rm: .05
+    -
+      Rd: [1, 1, 1]
+      Rm: .002
+      every_X: 10
   Rm: .05
   u: [0, 0, 0]
   max_steering_angle: 0.174533
