Exposed seed to the config file.

--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,15 @@
 ---
+seed: 1
 - # constant speed
   N: 4
   dt: 0.03
   T: 1.0
-  x0: [0, 0, 0, 0]
+  x0: [0, 0, 1, 0]
   Qd: [1, 1, 1, 1]
-  Qm: .1
+  Qm: .01
   obs:
     - Rd: [1, 1]
-      Rm: .1
+      Rm: .01
   u: [0, 0, 0, -0.1]
 - # RTBP
   N: 4
@@ -28,8 +29,6 @@
   x0: [0, 0, 0, 1, 0, 0]
   Qd: [0, 0, 0, 1, 1, 1]
   Qm: .1
-  Rd: [1, 1, 1]
-  R2d: [1, 1, 1]
   obs:
     - Rd: [1, 1, 1]
       Rm: .05
