--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ message(${USERNAME})
 include_directories("C:\\Users\\${USERNAME}\\Documents\\libraries\\eigen-3.3.7")
 
 #include boost
-set(BOOST_ROOT "C:\\Users\\${USERNAME}\\Documents\\libraries\\boost_1_74_0")
-find_package(Boost)
+set(BOOST_ROOT "C:\\Users\\${USERNAME}\\Documents\\libraries\\boost_1_60_0")
+find_package(Boost 1.74)
 include_directories(${Boost_INCLUDE_DIRS})
 
 #include yaml-cpp
