--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,7 @@
 ---
-seed: 1
+seed: 3
+#GT_file: GT_data_2.csv
+testCase:
 - # constant speed
   N: 4
   dt: 0.03
@@ -28,7 +30,7 @@ seed: 1
   T: 100
   x0: [0, 0, 0, 1, 0, 0]
   Qd: [0, 0, 0, 1, 1, 1]
-  Qm: .1
+  Qm: .3
   obs:
     - Rd: [1, 1, 1]
       Rm: .05
