--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ---
-seed: 1
+#seed: 1
 testCase:
 - # constant speed
   N: 4
@@ -34,30 +34,35 @@ testCase:
   integration_steps: 20
   T: 100
   x0: [0, 0, 0, 1, 0, 0]
-  Qd: [0, 0, 0, 1, 1, 1]
-  Qm: 1
+  Qd: [0, 0, 0, 1, 1, .5]
+  Qm: 1.3
   obs:
-    - Rd: [1, 1, 1]
-      Rm: .07
+    - Rd: [1, 1, .5]
+      Rm: .1
       to_file: vehicle_data/IMU.csv
     -
-      Rd: [1, 1, 1]
+      Rd: [1, 1, .5]
       Rm: .005
-      every_X: 5
+      every_X: 20
       to_file: vehicle_data/VISUAL.csv
   u: [0, 0, 0]
   max_steering_angle: 0.174533
 - # Vehicle cloning
+  GT_from_file: vehicle_data/GT.csv
+  U_from_file: vehicle_data/IMU.csv
   N: 6
   dt: 0.1
   T: 100
+  integration_steps: 20
   x0: [ 0, 0, 0, 0, 0, 0 ]
-  Qd: [ 1, 1, 1, 0, 0, 0 ]
-  Qm: 1
+  Qd: [ 1, 1, .5, 0, 0, 0 ]
+  Qm: 0.1
+  Cd: [1, 1, 1]
+  Cm: 1
   obs:
-    - Rd: [ 1, 1, 1 ]
-      Rm: .0025
-      every_X: 10
-      to_file: vehicle_cloning_data/VISUAL.csv
+    - Rd: [ 1, 1, .5 ]
+      Rm: .01
+      every_X: 20
+      from_file: vehicle_data/VISUAL.csv
   u: [ 1, 0, 0 ]
   max_steering_angle: 0.174533
