--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 add_subdirectory(library)
 add_subdirectory(functions)
 add_executable(test_fusion_viso2_imu test.cpp multivar_noise.h)
+add_executable(test_rotations test_rotations.cpp)
 
 #link libraries
 target_link_libraries(test_fusion_viso2_imu PUBLIC fusion_viso2_imu functions_fusion_viso2_imu)
