--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ testCase:
 - # constant speed
   N: 4
   dt: 0.01
+  integration_dt: 0.0001
   T: 1.0
   x0: [0, 0, 1, 0]
   Qd: [1, 1, 1, 1]
@@ -15,6 +16,7 @@ testCase:
 - # RTBP
   N: 4
   dt: 0.03
+  integration_dt: 0.0003
   T: 6.2296051135204102
   x0: [1.033366313746765, 0, 0, -.05849376854515592]
   Qd: [1, 1, 1, 1]
@@ -31,7 +33,7 @@ testCase:
   U_to_file: vehicle_data/U.csv
   N: 6
   dt: 0.1
-  integration_steps: 20
+  integration_dt: 0.005
   T: 100
   x0: [0, 0, 0, 1, 0, 0]
   Qd: [0, 0, 0, 1, 1, .5]
@@ -48,21 +50,28 @@ testCase:
   u: [0, 0, 0]
   max_steering_angle: 0.174533
 - # Vehicle cloning
-#  GT_from_file: vehicle_data/GT.csv
-#  U_from_file: vehicle_data/IMU.csv
   N: 6
   dt: 0.1
   T: 100
-  integration_steps: 20
+  integration_dt: 0.005
   x0: [ 0, 0, 0, 1, 0, 0 ]
   Qd: [0, 0, 0, 1, 1, .5]
   Qm: 1.3
-  Cd: [1, 1, .5]
-  Cm: .1
   obs:
     - Rd: [ 1, 1, .5 ]
       Rm: .05
       every_X: 100
-#      from_file: vehicle_data/VISUAL.csv
-  u: [ 1, 0, 0 ]
-  max_steering_angle: 0.174533
+- # Vehicle3 smoothing
+  Time_from_file: exoter_logs/log_1_time.csv
+  N: 12
+  dt: 0.01
+  T: 1000
+  integration_dt: 0.01
+  x0: [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
+  Qd: [0, 0, 0, 0, 0, 0, 1, 1, 1, .1, .1, .1]
+  Qm: 0.01
+  obs:
+    - Rd: [ 1, 1, 1, .1, .1, .1]
+      Rm: .005
+      from_file: exoter_logs/log_1.csv
+  u: [ 0 ]
