--- a/config.yaml
+++ b/config.yaml
@@ -57,10 +57,14 @@ testCase:
   x0: [ 0, 0, 0, 1, 0, 0 ]
   Qd: [0, 0, 0, 1, 1, .5]
   Qm: 1.3
+  Cd: [1, 1, .5]
+  Cm: .1
   obs:
     - Rd: [ 1, 1, .5 ]
       Rm: .05
       every_X: 100
+  u: [0, 0, 0]
+  max_steering_angle: 0.174533
 - # Vehicle3 smoothing
   Time_from_file: exoter_logs/log_1_time.csv
   Kalman_to_file: exoter_logs/log_1_filtered.csv
