--- a/config.yaml
+++ b/config.yaml
@@ -74,7 +74,7 @@ testCase:
   integration_dt: 0.01
   x0: [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
   Qd: [0, 0, 0, 0, 0, 0, 1, 1, 1, .1, .1, .1]
-  Qm: 0.01
+  Qm: 0.1
   obs:
     - Rd: [ 1, 1, 1, .1, .1, .1]
       Rm: .05
@@ -89,9 +89,10 @@ testCase:
     x0: [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ]
     Qd: [0, 0, 0, 0, 0, 0, 1, 1, 1, .1, .1, .1]
     Qm: 0.01
-    Cd: [ 1, 1, 1, .1, .1, .1]
-    Cm: .05
+    Cd: [ 1, 1, 1, 1, 1, 1]
+    Cm: .001
     obs:
       - Rd: [ 1, 1, 1, .1, .1, .1]
+        every_X: 100
         Rm: .05
     u: [ 0 ]
