--- a/config.yaml
+++ b/config.yaml
@@ -7,11 +7,14 @@ testCase:
   integration_dt: 0.0001
   T: 1.0
   x0: [0, 0, 1, 0]
-  Qd: [1, 1, 1, 1]
-  Qm: .01
+  Qd: [.01, .01, .01, .01]
+  Qm: 1
   obs:
     - Rd: [1, 1]
       Rm: .01
+    - Rd: [1, 1]
+      Rm: .001
+      every_X: 10
   u: [0, 0, 0, -0.1]
 - #2 RTBP
   N: 4
